# Atestado-Validator

./: .dockerignore  .gitignore  .replit  CLAUDE.md  Dockerfile  pnpm-lock.yaml  pyproject.toml  railway.toml  replit.md  replit.nix
.agents/memory/: MEMORY.md  dynamic-public-base-url.md  mcp-connector-token-in-url.md  streamlit-bcrypt-auth-seed.md  streamlit-embedded-api-routes.md
artifacts/atestado/: index.html  package.json
artifacts/atestado-validator/: README.md  app.py  requirements.txt  server.py
artifacts/atestado-validator/.streamlit/: config.toml
artifacts/atestado-validator/data/: atestados.db  atestados.db-shm  atestados.db-wal
artifacts/atestado-validator/src/: __init__.py  api.py  api_tokens.py  audit.py  auth.py  canva_admin.py  canva_client.py  crypto.py  database.py  issuers.py  mcp_server.py  oauth_server.py  ocr.py  parser.py  qr_generator.py  qr_reader.py  retencao.py  risk_report.py  source_check.py  urls.py  validators.py
artifacts/atestado/.replit-artifact/: artifact.toml
