[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "opencv-python-headless>=5.0.0.93",
    "pillow>=12.3.0",
    "pytesseract>=0.3.13",
    "pyzbar>=0.1.9",
    "requests>=2.34.2",
    "streamlit>=1.59.0",
]
